exceptions/require-signed-exceptions.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-exceptions
spec:
  validationFailureAction: enforce
  rules:
    - name: require-signed
      match:
        any:
        - resources:
            kinds:
              - PolicyException
      validate:
        manifests:
          attestors:
          - count: 1
            entries:
            - keys:
                publicKeys: |-
                  -----BEGIN PUBLIC KEY-----
                  MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEyBg8yod24/wIcc5QqlVLtCfL+6Te
[...]
                  -----END PUBLIC KEY-----
